# cmne

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
1_implementation/: 1_run_hyper_evaluation.py  cmneconfig.py
1_implementation/3_kalman_filter/: notes  plot_dmapem_inverse.py
1_implementation/helpers/: biodata.py  biosettings.py  cmnedata.py
2_data/Simulations/: source_space_tools.py
2_data/mns_data/: read_epochs.py
3_comparing_methods/Kalman filter/: dmap_em.py  dmap_em_tf.py
3_comparing_methods/TF mixed norm/: plot_time_frequency_mixed_norm_inverse.py
II_data/: readme.txt
II_data/Simulations/: epilepsy_simulation.py  other_tools.py  plotting_tools.py
II_data/mns_data/: stimulus_sheraz.py
I_implementation/: II_run_crossvalidation.py  II_run_crossvalidation_training.py  II_run_training.py  I_run_crossvalidation_hyper_evaluation.py  I_run_crossvalidation_hyper_evaluation_job1.py  I_run_crossvalidation_hyper_evaluation_job2.py  I_run_crossvalidation_hyper_evaluation_job3.py  I_run_crossvalidation_hyper_evaluation_job4.py  I_run_crossvalidation_hyper_evaluation_job5.py  I_run_crossvalidation_hyper_evaluation_job6.py  I_run_crossvalidation_hyper_evaluation_job7.py  I_run_crossvalidation_hyper_evaluation_job8.py  I_run_crossvalidation_hyper_evaluation_job9.py  I_run_crossvalidation_hyper_evalutaion.py  I_run_hyper_evaluation.py  config.py
I_implementation/helpers/: cmnedata.py  cmnesettings.py
I_implementation/lstm_statistics/: eval_lstm.py
archive/I_implementation/: I_run_crossvalidation_hyper_evaluation.py  I_run_crossvalidation_hyper_evaluation_job4.py  I_run_crossvalidation_hyper_evaluation_job5.py  config_md.py
cmne/: __init__.py  cmnesettings.py  data.py  settings.py  train.py
cmne/I_implementation/: II_run_training.py  I_run_crossvalidation_hyper_evaluation_job3.py  (+2 more)
examples/: config.py  ex_cmne.py  ex_training.py
tests/: test_simple_cmne.py
(+18 files in other folders)
