[metadata]
name = cmne
version = 0.0.1
author = CMNE developers
maintainer = Christoph Dinh
maintainer_email = christoph.dinh@mne-cpp.org
description = Contextual Minimum Norm Estimates
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MEG cerebellum mne python
url = https://github.com/chdinh/cmne
project_urls =
    Bug Tracker = https://github.com/chdinh/cmne/issues
    Source = https://github.com/chdinh/cmne
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cmne
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cmne