# [metadata]
# name = cmne
# url = https://github.com/chdinh/cmne
# author = cmne developers
# maintainer = Christoph Dinh
# maintainer_email = christoph.dinh@mne-cpp.org
# description = Contextual Minimum Norm Estimates (CMNE)
# long_description = file: README.md
# long_description_content_type = text/markdown
# keywords = MEG EEG spatiotemporal source estimation spatial filtering grid-based Markov localization LSTM deep learning
# license = MIT
# license_files = LICENSE
# platforms = any
# classifiers =
#     Intended Audience :: Science/Research
#     Intended Audience :: Developers
#     License :: OSI Approved :: MIT License
#     Topic :: Scientific/Engineering
#     Programming Language :: Python :: 3
#     Development Status :: 1 - Planning
#     Operating System :: OS Independent
# project_urls =
#     Bug Tracker = https://github.com/chdinh/cmne/issues
#     Source = https://github.com/chdinh/cmne

# [options]
# python_requires = >=3.7
# install_requires =
#TBD uncomment for release build
#  numpy >= 1.21.2
#  mne >= 0.23.4
#  tensorflow >= 2.6.0
# packages = find:
# include_package_data = True

# [options.packages.find]
# exclude =
#     tests

# [bdist_wheel]
# universal = true
